Added token cache and refactored search